--- a/css/advanced-responsive-fixes.css
+++ b/css/advanced-responsive-fixes.css
@@ -89,8 +89,7 @@ html, body {
 #about,
 #portfolio,
 #contact,
-#footer,
-.horizontal-scroll-container {
+#footer {
     width: 100%;
     max-width: 100vw;
     overflow-x: hidden;
@@ -154,26 +153,6 @@ html, body {
     .wow-subtitle {
         font-size: 0.9rem;
         padding: 0 15px;
-    }
-}
-
-/* Fix for horizontal scroll section */
-.horizontal-scroll-container {
-    position: relative;
-}
-
-@media screen and (max-width: 991px) {
-    .horizontal-scroll-section {
-        position: static;
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-    
-    .horizontal-scroll-item {
-        width: 100%;
-        min-height: auto;
-        padding: 40px 0;
     }
 }
 
