--- a/css/consolidated-responsive.css
+++ b/css/consolidated-responsive.css
@@ -269,9 +269,9 @@
     }
     
     /* Scroll progress indicator */
-    /*.scroll-progress {*/
-    /*    height: 3px;*/
-    /*}*/
+    .scroll-progress {
+        height: 3px;
+    }
     
     /* Section padding */
     section {
